# api/internal/models/checkin.go
@@ -5,9 +5,9 @@ import (
 )
 
 type CheckIn struct {
-	ID         int64              `json:"id"`
-	LocationID string             `json:"locationId"`
-	SchoolID   int64              `json:"schoolId"`
-	Capacity   int64              `json:"capacity"`
-	CreatedAt  pgtype.Timestamptz `json:"createdAt"  swaggertype:"string"`
-} //	@name	CheckIn
+	ID         int64  
+	LocationID string         
+	SchoolID   int64         
+	Capacity   int64           
+	CreatedAt  pgtype.Timestamptz
+}
